<resources>
    <string name="app_name">Micro Parcel</string>
    <string name="sign_in">SIGN IN</string>
    <string name="micro_parcel_logo">micro parcel logo</string>
    <string name="login">Login</string>
    <string name="enter_code">Enter Code</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="verify_code">Verify Code</string>
    <string name="select_service_type">Select Service Type</string>
    <string name="logistics_service">Logistics Service</string>
    <string name="country_code">+91</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_order">Orders</string>
    <string name="your_orders">History</string>
    <string name="more">Settings</string>
    <string name="disp_background">disp background</string>
    <string name="textview">TextView</string>
    <string name="select_pickoff_address">Select Pickoff Address</string>
    <string name="v_bike">v_bike</string>
    <string name="v_truck">v_truck</string>
    <string name="select_dropoff_address">Select Dropoff Address</string>
    <string name="xs">XS</string>
    <string name="xm">XM</string>
    <string name="xl">XL</string>
    <string name="x2l">X2L</string>
    <string name="upto_30kgs">Upto 30kgs</string>
    <string name="proceed">Proceed Next</string>
    <string name="open_body">Open Body</string>
    <string name="container_body">Container Body</string>
    <string name="l_15_w_15_h_15">L = 15, W = 15, H = 15</string>
    <string name="desc_xs">Best for urgent deliveries of documents, parcels like books, gifts, cakes, small electronics and other stuffs upto 30 kg of weight.</string>
    .
    <string name="v_iv">v_iv</string>
    <string name="goods_to_ship">Goods to ship</string>
    <string name="loading">Loading</string>
    <string name="unloading">Unloading</string>
    <string name="_500">₹500</string>
    <string name="estimate_fare">Request Vehicle</string>
    <string name="estimated_fare">Estimated Fare</string>
    <string name="goods_approx_weight">Goods approx weight</string>
    <string name="insurance">Insurance</string>
    <string name="proof_of_delivery_physical">Proof of Delivery (Physical)</string>
    <string name="delivery_instructions_cod_amount">Delivery Instructions / COD Amount</string>
    <string name="any_delivery_instructions">Any Delivery Instructions</string>
    <string name="any_cod_amount">Any COD Amount</string>
    <string name="submit">Submit</string>
    <string name="loading_lod">loading…</string>
    <string name="vehicle_im">vehicle_im</string>
    <string name="hey_your_vehicle_is_on_way">Hey, your request has been accepted.</string>
    <string name="eta_02_59_sec">ETA 02:59 sec</string>
    <string name="title_activity_track_driver">Map</string>
    <string name="xs_veh">XS</string>
    <string name="del_bike">Delivery Bikes</string>
    <string name="xm_veh">XM</string>
    <string name="ape">Piaggio Ape, Vikram Loading, etc.</string>
    <string name="_15">Upto 15 Kgs</string>
    <string name="_l40">L = 40 Inches, W = 40 Inches, H = 40 Inches</string>
    <string name="bike_desc">Best for urgent deliveries of documents, parcels like books, gifts, cakes, small electronics and other stuffs upto 30 kg of weight.</string>
    <string name="up_500">Upto 500 Kgs</string>
    <string name="l6">L = 6 Feet, W = 4.5 Feet, H = 5.5 Feet</string>
    <string name="xl_veh">XL</string>
    <string name="ace">Tata Ace, M Geeto, etc.</string>
    <string name="up750">Upto 750 Kgs</string>
    <string name="l7">L = 7 Feet, W = 5 Feet, H = 6 Feet</string>
    <string name="x2l_veh">X2L</string>
    <string name="dost">AL Dost, M Pickup, etc.</string>
    <string name="up1500">Upto 1500 Kgs</string>
    <string name="l8">L = 8 Feet, W = 5.3 Feet, H = 6.9 Feet</string>
    <string name="our_representative_driver_will_contact_you_as_soon_as_possible">Our representative/driver will contact you as soon as possible.</string>
    <string name="eta_10_min">ETA 10 MIN</string>
    <string name="redirecting">Redirecting...</string>
    <string name="_25_feb_2019_12_00_pm">25 Feb 2019, 12:00 PM</string>
    <string name="completed">Completed</string>
    <string name="tata_ace">Tata Ace</string>
    <string name="go_to_your_orders">GO TO YOUR ORDERS</string>
    <string name="mpodr23201902_1">MPODR23201902-1</string>
    <string name="some_address">Some Address...</string>
    <string name="trip_ongoing">Trip Ongoing</string>
    <string name="cancel">Cancel</string>
    <string name="track">Track</string>
    <string name="tue_26_02_2019_12_20_am">Tue 26:02:2019 12:20 AM</string>
    <string name="mpodr23201902_0">MPODR23201902-0</string>
    <string name="book">Book</string>
    <string name="orders">Orders</string>
    <string name="payment">Payment</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="signup">Signup</string>
    <string name="existing_user">Existing User</string>
    <string name="new_user">New User</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="select_user_type">Select User Type</string>
    <string name="name">Name</string>
    <string name="gst_number">GST Number</string>
    <string name="what_you_generally_ship">What you generally ship</string>
    <string name="how_frequently_you_ship">How frequently you ship</string>
    <string name="submit_details">submit details</string>
    <string name="personal">Personal</string>
    <string name="business">Business</string>
    <string name="biz">biz</string>
    <string name="per">per</string>
    <string name="select_dropoff_contact">Select Dropoff Contact</string>
    <string name="select_pickoff_contact">Select Pickoff Contact</string>
    <string name="logout">Logout</string>
    <string name="sahil_singh">Sahil Singh</string>
    <string name="sahilsingh_indore_mail_com">sahilsingh.indore@mail.com</string>
    <string name="_7389410182">7389410182</string>
    <string name="verify_your_email_now">verify your email now</string>
    <string name="personal_user">Personal User</string>
    <string name="no_orders">No Orders</string>
    <string name="forgot_password_t">Forgot Password ?</string>
    <string name="email">Email</string>
    <string name="button">Button</string>
    <string name="reset_password">Reset Password</string>
    <string name="get_otp">GET OTP</string>
    <string name="verify_amp_login"><![CDATA[Verify & Login]]></string>
    <string name="change_no">CHANGE no.</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="auto_verifying_otp">Auto verifying otp ...</string>
    <string name="contact_us">Contact Us</string>
    <string name="for_any_queries_or_help">For any queries or help</string>
    <string name="call_us">call us</string>
    <string name="mail_us_at_contact_microparcel_co">Mail us at contact@microparcel.co</string>
    <string name="no_information">No Information</string>
    <string name="update_profile">Update Profile</string>

</resources>
